--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,7 +2,20 @@ AllCops:
   Exclude:
     - 'berks-cookbooks/**/*'
 
+AlignParameters:
+  Enabled: false
+
 Encoding:
   Enabled: false
+
 LineLength:
+  Enabled: false
+
+MethodLength:
+  Enabled: false
+
+RescueModifier:
+  Enabled: false
+
+AbcSize:
   Enabled: false
